cmd/openshift/operator/kodata/webhook/webhook.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-operator-proxy-webhook
  namespace: tekton-pipelines
  labels:
    version: "devel"
    operator.tekton.dev/release: "devel"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tekton-operator-proxy-webhook
  template:
    metadata:
      labels:
        name: tekton-operator-proxy-webhook
        app: tekton-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: tekton-operators-proxy-webhook
      containers:
        - name: proxy
          image: "ko://github.com/tektoncd/operator/cmd/openshift/proxy-webhook"
          ports:
            - name: https-webhook
              containerPort: 8443
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi

---

apiVersion: v1
kind: Service
metadata:
  name: tekton-operator-proxy-webhook
  namespace: tekton-pipelines
  labels:
    version: "devel"
    operator.tekton.dev/release: "devel"
spec:
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    name: tekton-operator-proxy-webhook

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: proxy.operator.tekton.dev
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: tekton-operator-proxy-webhook
        namespace: tekton-pipelines
    failurePolicy: Fail
    sideEffects: None
    name: proxy.operator.tekton.dev

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: annotation.operator.tekton.dev
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: tekton-operator-proxy-webhook
        namespace: tekton-pipelines
    failurePolicy: Fail
    sideEffects: None
    name: annotation.operator.tekton.dev

---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespace.operator.tekton.dev
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: tekton-operator-proxy-webhook
      namespace: tekton-pipelines
  failurePolicy: Fail
  sideEffects: None
  name: namespace.operator.tekton.dev
